<resources>
    <string name="app_name">Oho Pro</string>
    <string name="title_activity_login">Sign in</string>
    <string name="calendar_day_decorator">Calendar Day Decorator</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Enter Your Email</string>
    <string name="prompt_password">Enter Your Password </string>
    <string name="referral">Do you have Referral code? please Enter here.Otherwise leave it blank.</string>
    <string name="signup_info">By Registering,you agree that you have read and accepted our Policies,you are at least 18 years old,and consent to our Privacy Notice and receiving marketing communications from us</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="spinner_title">Select Category</string>
    <string name="message">Account approval is still in process. kindly contact customer care:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Coming Soon</string>
    <string name="googleplaceapi">AIzaSyDlkG4botbvYHwqd2uTS5Z0lQ6Z3rpFHM8</string>
</resources>
