<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="ohopro.com.ohopro.activity.SignUpActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tittle_bar"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Sign Up"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/largetextsize" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:scaleType="fitXY"
                android:src="@mipmap/logo" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <com.rilixtech.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:ccp_textColor="@color/black"
                    android:layout_weight="1"/>
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/phone_number_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="phone"
                    android:maxLength="12"
                    android:background="@drawable/edt_bg_normal"
                    android:layout_marginLeft="10dp"
                    android:inputType="phone"
                    android:layout_weight="6"/>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/ttl_businessname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:theme="@style/CustomTextInputLayout">
                <EditText
                    android:id="@+id/businessname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Legal Business Name"
                    android:paddingLeft="5dp"
                    android:imeActionLabel="Next"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/ttl_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:theme="@style/CustomTextInputLayout">
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:paddingLeft="5dp"
                    android:imeActionLabel="Next"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ttl_password"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                app:theme="@style/CustomTextInputLayout">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="Next"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:background="@drawable/manualbg">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:paddingLeft="10dp"
                    android:text="@string/referral"
                    android:textColor="#000000"
                    android:layout_margin="10dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/referral"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="Referral Code"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:textColorHint="#968585"
                    android:background="@drawable/manualbg"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:paddingLeft="10dp"
                android:text="@string/signup_info"
                android:textColor="#000000"
                android:layout_margin="10dp" />
            <Button
                android:id="@+id/Continue"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:minHeight="36dip"
                android:text="Continue"
                android:textColor="@color/white"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:id="@+id/login_txt"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>